Tested on 
Motorola Vip : 1960, 1910, 1903, 1963.

Thnx to all the testers and to  
Martin N for the german translation.
Tomas N for the Finnish translation.
Marc E for the black skin.

VDR 1.7.29+

0.28	Time to display volume info can be set independant from other OSD timeout.
	Key_TV/RADIO - Don't save current channel if current group is protected.


0.27	Weather info from openweathermap.org added. You can add your own api key, see settings.js
	Don't start the stream on boot or reload of the script if box is in standby and put clock back on.
	Fixed error getting german languages file.
	Get server ip from flash
	Bugfix, removed delayed play (in case of error) when you already start to play a recording
	Save old position before jump forward. In case of ongoing recording and jump position isn't recorded yet you don't start replay at 0
	News info from nu.nl (nl), dw.de (en/de), spiegel.de (en/de)
	News can be scrolled with up/down, left/right for server selection 
	Powerserverdown shares now blue button with restart script (almost nobody uses powerserverdown)
	After stream state paused & positionend, script waits TryingInterval time and tries to restart stream 
	  (if server is stopped/restarted you get this error)
	Black skin is getting completer
	BVN has no epg (unknown language code)
	Autoset number of digits lower if needed (default on but can be switched back to old behaviour)
	Epg info update for non C/T/S channels
	Changed key word 'FullURL' to 'IPTV'
	Finnish translation by Tomas Nybondas
	Menu time out, menu is removed 1 minute after last key press (not for MPD menu or recordings)
	(un)Mute external speakers with << or >> within menu (was experimental and settings menu only)
	Updated epgfilter for SRG channels on 13.0E




0.26	Fix for [undefined] in (search)timer menu when there are no (search)timers on server
	Changed Plugin check, only check if digit 1,2,3 from server ip & box ip are the same.
	Updated epgfilter for CDS on 19.2E, Brava HDTV on 23.2E