@@ -10,6 +10,7 @@ VDR 1.7.29+
 
 0.28	Time to display volume info can be set independant from other OSD timeout.
 	Key_TV/RADIO - Don't save current channel if current group is protected.
+	Radio Group can be set from settings.
 
 
 0.27	Weather info from openweathermap.org added. You can add your own api key, see settings.js
